# Tator

./: .env.example  .env.macos.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLIP_upgrade_brief.txt  LABEL_SCHEMA_REFACTOR_BRIEF.md  SESSION_SUMMARY.txt  agentic_overhaul_plan.txt  classifier_testing_methodology.md  classifier_training_report.txt  clip_dinov3_metrics_20241224.csv  clip_dinov3_metrics_20241224.json  clip_dinov3_metrics_20241224.txt  clip_dinov3_metrics_20241224_shard0.csv  clip_dinov3_metrics_20241224_shard0.json  clip_dinov3_metrics_20241224_shard0.txt  clip_dinov3_metrics_20241224_shard1.csv  clip_dinov3_metrics_20241224_shard1.json  clip_dinov3_metrics_20241224_shard1.txt  clip_kmeans_and_regress.py  clip_mlp_diff_summary_20241224.txt  config.py  crashlog.txt  currentbrief.txt  dinov3_classifier_brief.txt  dinov3_classifier_improvements_to_consider.txt  dinov3_for_Classifier_guide.txt  dinov3_improvements_metrics_20250105.csv  dinov3_improvements_metrics_20250105.json  dinov3_improvements_metrics_20250105.txt  dinov3_improvements_minimal_20250105_gpu_merged.csv  dinov3_improvements_minimal_20250105_gpu_merged.json  dinov3_improvements_minimal_20250105_gpu_merged.txt  dinov3_improvements_minimal_20250105_gpu_shard0.csv  dinov3_improvements_minimal_20250105_gpu_shard0.json  dinov3_improvements_minimal_20250105_gpu_shard0.txt  dinov3_improvements_minimal_20250105_gpu_shard1.csv  dinov3_improvements_minimal_20250105_gpu_shard1.json  (+54 more)
api/: agent_mining.py  auto_label.py  calibration.py  class_analysis.py  clip_active_model.py  clip_registry.py  clip_training.py  crop_zip.py  data_ingestion.py  datasets.py  detectors_default.py  edr_packages.py  fs_upload.py  glossaries.py  predict_base64.py  predictor_settings.py  prepass.py  qwen_caption.py  qwen_datasets.py  qwen_infer.py  qwen_models.py  qwen_prepass.py  qwen_status.py  qwen_training.py  rfdetr.py  rfdetr_training.py  runtime.py  sam3_datasets.py  sam3_prompt_helper.py  sam3_prompts.py  sam3_registry.py  sam3_training.py  sam_preload.py  sam_slots.py  segmentation_build.py  (+3 more)
(+466 files in other folders)
