[tool.poetry]
name = "tator-annotation"
version = "0.1.0"
description = "Local annotation-assistance backend and UI."
authors = ["Tator contributors"]
readme = "readme.md"
packages = [{ include = "tools" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.scripts]
tator-setup = "tools.setup_env:main"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "E501",  # handled by black line-length
]

[tool.ruff.lint.isort]
known-first-party = ["localinferenceapi", "tools"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
no_strict_optional = true
follow_imports = "skip"
pretty = true

[tool.pytest.ini_options]
markers = [
  "auto_label_smoke: fast correctness checks for the automatic labeling stack",
  "auto_label_full: broader automatic labeling integration matrix for nightly/full runs",
  "auto_label_gpu: real-model automatic labeling runs that require GPU/runtime assets",
  "auto_label_perf: automatic labeling performance/regression checks",
  "ui: browser end-to-end smoke tests (requires RUN_UI_E2E=1 and Playwright)",
  "ui_auto_label: browser tests focused on automatic labeling flows",
  "ui_smoke: fast UI smoke scenarios for PR validation",
  "ui_full: broader UI flow matrix for nightly/full runs",
  "ui_usability_smoke: fast usability/legibility UI checks for PR validation",
  "ui_usability_full: broader usability/legibility UI checks for nightly/full runs",
  "ui_gpu_lifecycle: UI checks that validate heavy-job lifecycle semantics",
]
